fixed overflow issue

--- a/src/style/home.css
+++ b/src/style/home.css
@@ -93,47 +93,28 @@ color: white;
   text-align: center;
 }
 
+
+
 #navigation-menu-container{
   display: flex;
-  flex-flow: row wrap;
-  justify-content: center;
-  align-items: center;
+  flex-flow: wrap;
+  flex-direction: row;
   max-width: 1200px;
+  height: auto;
   margin: 10px auto;
 }
 
 .navigation-box-container{
-  flex: 1;
-  max-width: 370px;
+  display: inline-flex;
+  flex-direction: column;
+  height: auto;
+  overflow: visible;
   width: 370px;
-  min-width: 370px;
-  height: 420px;
-  margin: 10px;
+  max-width: 370px;
+  margin: 10px auto;
   box-shadow: 1px 2px 4px rgba(0, 0, 0, .5);
   text-decoration: none;
 }
-
-@media only screen and (max-width: 1200px) {
-  #navigation-menu-container{
-    padding: 0 1em;
-  }
-}
-@media only screen and (max-width: 850px) {
-  #navigation-menu-container{
-    padding: 0;
-  }
-}
-@media only screen and (max-width: 800px) {
-  #navigation-menu-container{
-    padding: 0 1em;
-  }
-}
-@media only screen and (max-width: 600px) {
-  #navigation-menu-container{
-    padding: 0;
-  }
-}
-
 
 .navigation-box-thumbnail{
   width: 100%;
@@ -162,7 +143,6 @@ color: white;
   font-size: 13pt;
   margin-top: 14px;
   letter-spacing: 1px;
-  overflow: hidden;
 }
 
 @media only screen and (max-width: 800px) {
